fix overlapping email on small screens

--- a/app/stylesheets/style.styl
+++ b/app/stylesheets/style.styl
@@ -419,11 +419,15 @@ p
 .invalid
     box-shadow: inset 0px 0px 5px $errorColor
 
-@media screen and (max-width: 500px)
+@media screen and (max-width: 600px)
     #profileImg1
+        display none
+    #profileName
         display none
     #navbar a
         font-size 20px
+    .profile-box-left
+        margin-top 29px
 
 /* Nav Icon */
 
